# pmat-test-gpt5

./: .gitignore  .pre-commit-config.yaml  README.md  generated-README.md  pyproject.toml  results.json  test.yaml
project/: find.py
src/findlike/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
