[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "findpy"
version = "0.1.0"
description = "A fast, find-like filesystem traversal CLI in pure Python."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["find", "cli", "filesystem", "search", "traverse"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://example.com/findpy"
Repository = "https://example.com/findpy.git"

[project.scripts]
findpy = "findlike.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.7",
  "ruff>=0.4.0",
  "black>=24.4",
  "pre-commit>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/findlike"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM", "PERF"]
ignore = []
exclude = [".venv", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = "(^build/|^dist/|^\\.venv/|^tests/)"

 
